# rosette

./: .gitignore  ARCHITECTURE.md  GEMINI.md  README.md  ROADMAP.md  TECH_STACK.md  package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: book.rs  document.rs  git.rs  llm.rs  mod.rs  workspace.rs
src-tauri/src/db/: books.rs  documents.rs  links.rs  mod.rs  snapshots.rs  workspace.rs
src-tauri/src/git/: mod.rs  types.rs
src-tauri/src/link_graph/: mod.rs
src-tauri/src/llm/: cloud.rs  mod.rs  ollama.rs
src-tauri/src/llm/modes/: mod.rs  novel.rs
src-tauri/src/search/: mod.rs
src/components/: MusePanel.jsx  Sidebar.jsx  StatusBar.jsx  TitleBar.jsx  WorkspaceDashboard.jsx
src/features/editor/: LinkSuggestion.jsx  TiptapEditor.jsx
